--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
         <title>reveal.js - Markdown Example</title>
 
-        <link rel="stylesheet" href="dist/reveal.css" />
-        <link rel="stylesheet" href="dist/theme/white.css" id="theme" />
+        <link rel="stylesheet" href="/dist/reveal.css" />
+        <link rel="stylesheet" href="/dist/theme/white.css" id="theme" />
 
-        <link rel="stylesheet" href="plugin/highlight/monokai.css" />
+        <link rel="stylesheet" href="/plugin/highlight/monokai.css" />
     </head>
     <style>
         .logo {
